Frankbelford/uatv1ba/force-app/main/default/objects/Site_Supplier_Link__c/Site_Supplier_Link__c.object-meta.xml
<CustomObject>
    <label>Site Supplier Link</label>
    <nameField>
        <label>Site Supplier Link Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Site Supplier Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>