Frankbelford/uatv1ba/force-app/main/default/objects/Site_Supplier_Link__c/fields/Instant_Vend_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Instant_Vend_Date_Time__c</fullName>
    <label>Instant Vend Date Time</label>
    <type>DateTime</type>
</CustomField>