Frankbelford/uatv1ba/force-app/main/default/objects/Site_Supplier_Link__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <label>Site</label>
    <referenceTo>sirenum__Site__c</referenceTo>
    <relationshipLabel>Site Supplier Links</relationshipLabel>
    <relationshipName>Site_Supplier_Links</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>