Frankbelford/uatv1ba/force-app/main/default/objects/Site_Supplier_Link__c/fields/Site_Account__c.field-meta.xml
<CustomField>
    <fullName>Site_Account__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; &amp; Site__r.sirenum__Operating_Company__c, Site__r.sirenum__Operating_Company__c, &apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site Account</label>
    <type>Text</type>
</CustomField>