Frankbelford/uatv1ba/force-app/main/default/objects/Site_Supplier_Link__c/fields/Supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Name__c</fullName>
    <formula>Suppliers__r.Supplier__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Name</label>
    <type>Text</type>
</CustomField>