Frankbelford/uatv1ba/force-app/main/default/objects/Site_Supplier_Link__c/fields/Suppliers__c.field-meta.xml
<CustomField>
    <fullName>Suppliers__c</fullName>
    <label>Suppliers</label>
    <referenceTo>Suppliers__c</referenceTo>
    <relationshipLabel>Site Supplier Links</relationshipLabel>
    <relationshipName>Site_Supplier_Links</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>